* Game :
	- ShowGenericLeaderboard
* ScoreSheet :
	- AddFinishedStage
* PauseMenu:
	- Added a PauseMenu Global that holds all its related stuff
	- Added a GetMyStuffSprite that returns the sprite used for the MyStuff items
	- Added a GetSelectedElement/SetSelectedElement similar to the one seen in other menus
	- Added GetState/SetState 
* Secrets Screen
	- This screen will now display modded achievements
	- Made it so the achievement attribute 'hidden' hides achievements from this menu
* XMLData :
	- Added GetModById since the normal GetEntryById wont give the expected result when you want to use actual mod ids
/newline/
Modified:
* PlayerManager :
	- FirstCollectibleOwner(CollectibleType Collectible, boolean LazSharedGlobalTag = true)
	- FirstTrinketOwner(TrinketType Trinket, RNG RNG = nil, boolean LazSharedGlobalTag = true)
* OptionsMenu :
	- Its functions can now be called ingame and point to the pause menu options submenu when appropiate
* PRE/POST_PLAYERHUD_RENDER_HEARTS callback now passes EntityPlayer (Vector Offset(?), Sprite HeartsSprite, Vector Position, float Unknown, EntityPlayer Player)
/newline/
Fixes:
* Fixed relative ids being displayed as actual ids on xmldata tables. 
* Fix GridEntity:ToFire/ToTNT/ToWall functions
* Fixed binder for Entity:ComputeStatusEffectDuration
* Fixed pause menu modded marks rendering over the controller disconected popup
* Fixed DamageFlag.DAMAGE_RED_HEARTS / .DAMAGE_NO_PENALTIES / .DAMAGE_FAKE not working when adding them via MC_ENTITY_TAKE_DMG's return table.
* Fixed an issue on xmldata that created extra ghost entries on some nodetypes when asking for stuff that isnt there
* Fixed an issue with the stats sprite for the pause menu callbacks where it ended up holding garbage data
/newline/
/newline/
v1.0.5a -
Fixes:
* Hot-Fixed a crash that happened when no mods were enabled in 1.0.5
/newline/
/newline/
v1.0.5 -
Additions:
* Added Challenge completion tracking to the mod challenges menu
* Added localization code support