@@ -1,5 +1,11 @@
+"558bec515368dd020000":
+__thiscall void ItemConfig::Init();
+
 "558beca1????????8b55??85c0":
 __thiscall ItemConfig_Item* ItemConfig::GetCollectible(int id);
+
+"558BEC8B45??85C078??8B51??8B49??2BCAC1F9023BC17D??8B04??5DC2040033C05DC20400????????????????????558bec8b????85d274":
+__thiscall ItemConfig_Card* ItemConfig::GetCard(int id);
 
 "538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????50515351b8f4000100":
 __thiscall void ItemConfig::LoadCostumes(char *xmlpath, ModEntry* modentry);
