@@ -1,3 +1,6 @@
+"538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505383ec78a1????????33c58945??5657508d45??64a3????????8bf9897d??8b53":
+__thiscall void ItemPool::Init(unsigned int seed,char *filename);
+
 "558bec64a1????????83ec20":
 static __stdcall int ItemPool::GetCardEx(int Seed, int SpecialChance, int RuneChance, int SuitChance, bool AllowNonCards);
 
